# Fractal

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  easyx_compat.h  fractal_common.h
.github/workflows/: ci.yml  gh-pages.yml  release.yml
Mario2/: control.cpp  control.h  main.cpp  mydefine.h  read me.txt  role.cpp  role.h  rule.cpp  rule.h  scene.cpp  scene.h
Mario2/res/: Thumbs.db
arboresent/: arboresent.sln
arboresent/arboresent/: arboresent.cpp  arboresent.vcxproj  arboresent.vcxproj.filters
cantor/: cantor.cpp
docs/: index.html
dragon/: dragon.cpp
fern/: fern.cpp
hilbert/: hilbert.cpp
kochsnow/: kochsnowByASCII.cpp  kochsnowByEasyX.cpp  readme.txt
lsystem/: demo.cpp  lsystem.h
mandelbrot/: interactive.cpp  mandelbrot.cpp
mouse/: mouse.cpp  readme.txt
qa/: render_screenshots.cpp
rainbow/: rainbow.cpp  readme.txt
sierpinski/: readme.txt  sierpinski.cpp  sierpinskiCarpet.cpp
stars/: readme.txt  stars.cpp
tests/: CMakeLists.txt  math_test.cpp
triangle/: readme.txt  triangle.cpp
